--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
                     <span class="first-name">Дмитрий</span><span>&nbsp;Лыжин</span>
                 </a>
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2">Обо мне</a></li>
-                    <li><a href="#" class="nav-link px-2">Навыки</a></li>
-                    <li><a href="#" class="nav-link px-2">Проекты</a></li>
+                    <li><a href="#about" class="nav-link px-2">Обо мне</a></li>
+                    <li><a href="#team" class="nav-link px-2">Моя команда</a></li>
+                    <li><a href="#projects" class="nav-link px-2">Проекты</a></li>
                 </ul>
                 <div class="col-md-3 d-flex justify-content-between align-items-center" bis_skin_checked="1">
                     <a href="https://www.linkedin.com/in/skaydi99/" target="_blank" class="nav-society-link">
                         <img src="/assets/img/linkedin.png" alt="">
                         Linkedin
                     </a>
-                    <a href="https://github.com/dmitriyl99" target="_blank" class="nav-society-link"><img src="/assets/img/github-mark-white.png" alt="">Github</a>
+                    <a href="https://github.com/dmitriyl99" target="_blank" class="nav-society-link"><img
+                            src="/assets/img/github-mark-white.png" alt="">Github</a>
                     <a href="" class="nav-society-link"><img src="/assets/img/mail.png" alt="">Contact Me</a>
                 </div>
             </header>
@@ -62,22 +63,81 @@
                     </div>
                     <div class="intro__photo col-lg-6 col-md-12">
                         <div class="d-flex justify-content-center align-items-bas">
-                            <div class="circle"></div>
+                            <div class="circle">
+                                <img src="/assets/img/avatar.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="about-me-content row">
                 <div class="col-6">
-                    <h2 class="about-me__header">обоМне<span class="text-white">( )</span></h2>
-                    <p class="ab">Меня зовут Дмитрий Лыжин, я Fullstack-разработчик и Data Engineer из Узбекистана.
+                    <h2 class="about-me__header" id="about">обоМне<span class="text-white">( )</span></h2>
+                    <p class="about-me__text">Fullstack-разработчик и Data Engineer из Узбекистана.
                         Выполнял разнообразные проекты на заказ, начиная от простых лендингов, до корпоративных системы
                         и автоматизации бизнес-процессов. Разрабатывал финансовую систему кредитования и рассрочки,
                         кастомные CRM-ки, заточенные под определённую компанию, Telegram-боты разнообразного назначения,
                         мобильные приложения, лендинги. Сейчас изучаю сферу организации, хранения и передачи больших
                         объёмов данных, взаимодейтсвию данных с аналитическими платформами и ML-разработкой.</p>
+                    <p>Представляю команду разработчиков разного профиля.</p>
                 </div>
                 <div class="col-6"></div>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <div class="container-fluid">
+            <div class="team-content">
+                <h2 class="team__header" id="team">команда<span class="text-white">( )</span></h2>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="d-flex flex-column team-member">
+                            <div class="team-member__image">
+                                <img src="https://picsum.photos/300/500" alt="">
+                            </div>
+                            <div class="team-member__name">
+                                Руслан
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="d-flex flex-column team-member">
+                            <div class="team-member__image">
+                                <img src="https://picsum.photos/300/500" alt="">
+                            </div>
+                            <div class="team-member__name">
+                                Мирзохид
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="d-flex flex-column team-member">
+                            <div class="team-member__image">
+                                <img src="https://picsum.photos/300/500" alt="">
+                            </div>
+                            <div class="team-member__name">
+                                Исмоил
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="d-flex flex-column team-member">
+                            <div class="team-member__image">
+                                <img src="https://picsum.photos/300/500" alt="">
+                            </div>
+                            <div class="team-member__name">
+                               Умид
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="projects">
+        <div class="container-fluid">
+            <div class="projects-content">
+                <h2 class="projects__header" id="projects">нашиПроекты<span class="text-white">( )</span></h2>
             </div>
         </div>
     </section>
