--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <img src="https://picsum.photos/300/500" alt="">
                             </div>
                             <div class="team-member__name">
-                               Умид
+                                Умид
                             </div>
                         </div>
                     </div>
@@ -138,6 +138,63 @@
         <div class="container-fluid">
             <div class="projects-content">
                 <h2 class="projects__header" id="projects">нашиПроекты<span class="text-white">( )</span></h2>
+                <div class="projects-wrapper">
+                    <div class="project-item">
+                        <div class="project-item-image__wrapper">
+                            <img src="/assets/img/ice_gold_bot.png" alt="">
+                        </div>
+                        <div class="project-item-title__wrapper">
+                            <span class="project-item-title__text">Бот доставки для ICE & GOLD</span>
+                        </div>
+                        <div class="project-item-description__wrapper">
+                            <span class="project-item-description">
+                                Бот доставки итальянского мороженного, гонгонских и бельгийских вафлей
+                            </span>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-item-image__wrapper">
+                            <img src="/assets/img/ims_bot.jpg" alt="">
+                        </div>
+                        <div class="project-item-title__wrapper">
+                            <span class="project-item-title__text">Telegram-бот для размещения рекламы.</span>
+                        </div>
+                        <div class="project-item-description__wrapper">
+                            <span class="project-item-description">
+                                Информационный бот для компании IMEDIA SERVICE, которая занимается размешением рекламы.
+                                Реализован функционал принятия заявок
+                            </span>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-item-image__wrapper">
+                            <img src="/assets/img/forset.png" alt="">
+                        </div>
+                        <div class="project-item-title__wrapper">
+                            <span class="project-item-title__text">Forset</span>
+                        </div>
+                        <div class="project-item-description__wrapper">
+                            <span class="project-item-description">
+                                Корпоративная система управления клиентами, автопарком и заказами для компании по аренде
+                                автомобилей Forset
+                            </span>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-item-image__wrapper">
+                            <img src="/assets/img/flats.png" alt="">
+                        </div>
+                        <div class="project-item-title__wrapper">
+                            <span class="project-item-title__text">Flats</span>
+                        </div>
+                        <div class="project-item-description__wrapper">
+                            <span class="project-item-description">
+                                Мобильное приложение для агенства по недвижимости, позволяющая вести учёт объектов,
+                                продаж, добавления сотрудников и административную часть и всё это в телефоне.
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
