Add team members

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="d-flex flex-column team-member">
                             <div class="team-member__image">
-                                <img src="https://picsum.photos/300/500" alt="">
+                                <img src="/assets/img/ruslan.webp" alt="">
                             </div>
                             <div class="team-member__name">
                                 Руслан
@@ -103,7 +103,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="d-flex flex-column team-member">
                             <div class="team-member__image">
-                                <img src="https://picsum.photos/300/500" alt="">
+                                <img src="/assets/img/mirzoxid.webp" alt="">
                             </div>
                             <div class="team-member__name">
                                 Мирзохид
@@ -113,7 +113,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="d-flex flex-column team-member">
                             <div class="team-member__image">
-                                <img src="https://picsum.photos/300/500" alt="">
+                                <img src="/assets/img/ismoil.webp" alt="">
                             </div>
                             <div class="team-member__name">
                                 Исмоил
@@ -123,7 +123,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="d-flex flex-column team-member">
                             <div class="team-member__image">
-                                <img src="https://picsum.photos/300/500" alt="">
+                                <img src="/assets/img/umid.webp" alt="">
                             </div>
                             <div class="team-member__name">
                                 Умид
