--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </a>
                     <a href="https://github.com/dmitriyl99" target="_blank" class="nav-society-link"><img
                             src="/assets/img/github-mark-white.png" alt="">Github</a>
-                    <a href="" class="nav-society-link"><img src="/assets/img/mail.png" alt="">Contact Me</a>
+                    <a href="tel:+998943939930" class="nav-society-link"><img src="/assets/img/mail.png" alt="">Contact Me</a>
                 </div>
             </header>
             <div class="about-main-content">
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="about-me-content row">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <h2 class="about-me__header" id="about">обоМне<span class="text-white">( )</span></h2>
                     <p class="about-me__text">Fullstack-разработчик и Data Engineer из Узбекистана.
                         Выполнял разнообразные проекты на заказ, начиная от простых лендингов, до корпоративных системы
@@ -81,7 +81,7 @@
                         объёмов данных, взаимодейтсвию данных с аналитическими платформами и ML-разработкой.</p>
                     <p>Представляю команду разработчиков разного профиля.</p>
                 </div>
-                <div class="col-6"></div>
+                <div class="col-lg-6 col-md-12"></div>
             </div>
         </div>
     </section>
@@ -98,6 +98,9 @@
                             <div class="team-member__name">
                                 Руслан
                             </div>
+                            <div class="team_member__position">
+                                Frontend-разработчик
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
@@ -107,6 +110,9 @@
                             </div>
                             <div class="team-member__name">
                                 Мирзохид
+                            </div>
+                            <div class="team_member__position">
+                                Backend-разработчик
                             </div>
                         </div>
                     </div>
@@ -118,6 +124,9 @@
                             <div class="team-member__name">
                                 Исмоил
                             </div>
+                            <div class="team_member__position">
+                                Frontend-разработчик
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
@@ -127,6 +136,9 @@
                             </div>
                             <div class="team-member__name">
                                 Умид
+                            </div>
+                            <div class="team_member__position">
+                                Проект-менеджер
                             </div>
                         </div>
                     </div>
