--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <img src="/assets/img/logo_transparent.png" alt="SKAYDI DEV" width="64">
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 d-flex justify-content-around mb-md-0 w-50">
-                    <li><a href="#" class="nav-link px-2 link-body-emphasis">Проекты</a></li>
+                    <li><a href="#projects" class="nav-link px-2 link-body-emphasis">Проекты</a></li>
                     <li><a href="#" class="nav-link px-2 link-body-emphasis">Заказать проект</a></li>
                     <li><a href="#" class="nav-link px-2 link-body-emphasis">Контакты</a></li>
                 </ul>
@@ -89,11 +89,18 @@
         </div>
     </div>
     <div class="container">
-        <h2
-            class="projects-header animate__animated animate__animated animate__animated animate__backInLeft animate__delay-2s">
+        <h2 id="projects"
+            class="projects-header animate__animated animate__backInLeft animate__delay-2s">
             Наши проекты
         </h2>
-        <div class="project-items">
+        <div class="project-items animate__animated animate__backInLeft animate__delay-2s">
+            <div class="project-item">
+                <div class="project-item__name">Barbucks</div>
+                <div class="project-item__description" data-toggle="modal" data-target="#nasiyaModal">Демо-версия бота
+                    доставки с каталогом с возможностью разработки индивидуального дизайна для вашей компании!
+                </div>
+                <div class="project-item__link"><a href="https://t.me/Barbucks_demo_bot" target="_blank">t.me/Barbucks_demo_bot</a></div>
+            </div>
             <div class="project-item">
                 <div class="project-item__name">Alif Nasiya</div>
                 <div class="project-item__description" data-toggle="modal" data-target="#nasiyaModal">Внёс вклад в
