--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 d-flex justify-content-around mb-md-0 w-50">
                     <li><a href="#projects" class="nav-link px-2 link-body-emphasis">Проекты</a></li>
-                    <li><a href="#" class="nav-link px-2 link-body-emphasis">Заказать проект</a></li>
+                    <li><a href="#contactForm" class="nav-link px-2 link-body-emphasis">Заказать проект</a></li>
                     <li><a href="#" class="nav-link px-2 link-body-emphasis">Контакты</a></li>
                 </ul>
                 <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-lg-4 col-md-12">
                     <div class="d-flex flex-column animate__animated animate__bounceInRight animate__delay-1s">
-                        <a href="https://t.me/dmitriydev1899" class="write-button mt-sm-4">Написать в Telegram</a>
+                        <a href="https://t.me/dmitriydev1899" class="write-button mt-4 mt-md-9">Написать в Telegram</a>
                         <div class="d-flex justify-content-around align-items-center mt-4">
                             <img src="/assets/img/avatar.webp" alt="" width="64">
                             <span class="mx-3">
@@ -89,65 +89,136 @@
         </div>
     </div>
     <div class="container">
-        <h2 id="projects"
-            class="projects-header animate__animated animate__backInLeft animate__delay-2s">
-            Наши проекты
+        <h2 id="projects" class="projects-header animate__animated animate__backInLeft animate__delay-2s">
+            Наши клиенты
         </h2>
-        <div class="project-items animate__animated animate__backInLeft animate__delay-2s">
-            <div class="project-item">
-                <div class="project-item__name">Barbucks</div>
-                <div class="project-item__description" data-toggle="modal" data-target="#nasiyaModal">Демо-версия бота
+        <div class="project-items animate__animated animate__fadeIn animate__delay-3s">
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">Barbucks</div>
+                <div class="project-item__description col-lg-7" data-toggle="modal" data-target="#nasiyaModal">
+                    Демо-версия бота
                     доставки с каталогом с возможностью разработки индивидуального дизайна для вашей компании!
                 </div>
-                <div class="project-item__link"><a href="https://t.me/Barbucks_demo_bot" target="_blank">t.me/Barbucks_demo_bot</a></div>
+                <div class="project-item__link col-lg-3"><a href="https://t.me/Barbucks_demo_bot"
+                        target="_blank">t.me/Barbucks_demo_bot</a></div>
             </div>
-            <div class="project-item">
-                <div class="project-item__name">Alif Nasiya</div>
-                <div class="project-item__description" data-toggle="modal" data-target="#nasiyaModal">Внёс вклад в
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">Alif Nasiya</div>
+                <div class="project-item__description col-lg-7" data-toggle="modal" data-target="#nasiyaModal">Внёс
+                    вклад в
                     развитие "финтех" решения для покупки товаров в
                     рассрочку, автоматизации бизнес процессов, в данный момент развиваю управление данными и аналитику
                 </div>
-                <div class="project-item__link"><a href="https://alifnasiya.uz/" target="_blank">alifnasiya.uz</a></div>
+                <div class="project-item__link col-lg-3"><a href="https://alifnasiya.uz/"
+                        target="_blank">alifnasiya.uz</a></div>
             </div>
-            <div class="project-item">
-                <div class="project-item__name">TezInfo</div>
-                <div class="project-item__description">Огромный справочник Ташкента, кладезь информации по ассортименту
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">TezInfo</div>
+                <div class="project-item__description col-lg-7">Огромный справочник Ташкента, кладезь информации по
+                    ассортименту
                     компаний в разных сферах и напавлениях</div>
-                <div class="project-item__link"><a href="https://tezinfo.uz" target="_blank">tezinfo.uz</a></div>
-            </div>
-            <div class="project-item">
-                <div class="project-item__name">ICE & GOLD EXCLUSIVE</div>
-                <div class="project-item__description">Кафе с итальянское мороженное, воздушными гонконскими и
-                    бельгийскими вафлями. Бот доставки с административной панелью</div>
-                <div class="project-item__link"><a href="https://t.me/IceandGolddelivery_bot"
-                        target="_blank">t.me/IceandGolddelivery_bot</a></div>
-            </div>
-            <div class="project-item">
-                <div class="project-item__name">International Media Service</div>
-                <div class="project-item__description">Рекламное агенство по запуску рекламы на телевидении в
-                    Узбекистане. Разработали бота для подачи заявок</div>
-                <div class="project-item__link"><a href="https://t.me/ims_uz_bot" target="_blank">t.me/ims_uz_bot</a>
+                <div class="project-item__link col-lg-3"><a href="https://tezinfo.uz" target="_blank">tezinfo.uz</a>
                 </div>
             </div>
-            <div class="project-item">
-                <div class="project-item__name">Metagalaktika Food</div>
-                <div class="project-item__description">Кафе европейской кухни в батутном центре Metagalaktika.
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">Budgetavto</div>
+                <div class="project-item__description col-lg-7">Компания по предоставлению автомобилией в аренду.
+                    Разработана система управления автопарком, клиентами, заказами, а так же аналитика доходов</div>
+                <div class="project-item__link col-lg-3"><a href="/budgetavto.html" target="_blank">Budgetavto</a>
+                </div>
+            </div>
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">BioRitm</div>
+                <div class="project-item__description col-lg-7">Частная клиника в Ташкенте по сдаче анализов ширкого
+                    спектра. Разработали систему управления пацинтами, докторами, результатами анализов, отправку
+                    результатов пациентам; реализована аналитика по доходности</div>
+                <div class="project-item__link col-lg-3"><a href="/bioritm.html" target="_blank">BioRitm</a>
+                </div>
+            </div>
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">Агенство недвижимости</div>
+                <div class="project-item__description col-lg-7">Агенство недвижимости с мобильным приложением для
+                    управления объектами</div>
+                <div class="project-item__link col-lg-3"><a href="/luper-flats.html" target="_blank">LuperFlats</a>
+                </div>
+            </div>
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">ICE & GOLD EXCLUSIVE</div>
+                <div class="project-item__description col-lg-7">Кафе с итальянское мороженное, воздушными гонконскими и
+                    бельгийскими вафлями. Бот доставки с административной панелью</div>
+                <div class="project-item__link col-lg-3"><a href="https://t.me/IceandGolddelivery_bot"
+                        target="_blank">t.me/IceandGolddelivery_bot</a></div>
+            </div>
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">International Media Service</div>
+                <div class="project-item__description col-lg-7">Рекламное агенство по запуску рекламы на телевидении в
+                    Узбекистане. Разработали бота для подачи заявок</div>
+                <div class="project-item__link col-lg-3"><a href="https://t.me/ims_uz_bot"
+                        target="_blank">t.me/ims_uz_bot</a>
+                </div>
+            </div>
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">Metagalaktika Food</div>
+                <div class="project-item__description col-lg-7">Кафе европейской кухни в батутном центре Metagalaktika.
                     Разработали Telegram-бот доставки с административной панелью: складской учёт, CRM, интеграция с
                     платёжными системами</div>
-                <div class="project-item__link"><a href="https://t.me/metagalaktika_food_bot"
+                <div class="project-item__link col-lg-3"><a href="https://t.me/metagalaktika_food_bot"
                         target="_blank">t.me/metagalaktika_food_bot</a></div>
             </div>
-            <div class="project-item">
-                <div class="project-item__name">MassPower FX Signal VIP Bot</div>
-                <div class="project-item__description">Компания, занимающаяся трейдингом и обучением треудингу.
+            <div class="project-item row">
+                <div class="project-item__name col-lg-2">MassPower FX Signal VIP Bot</div>
+                <div class="project-item__description col-lg-7">Компания, занимающаяся трейдингом и обучением треудингу.
                     Разработали телеграм бота для оформления подписки и получения Forex-сигналов. Административная
                     панель, интегрированная с TradingView и необходиым функционалом для рассылки</div>
-                <div class="project-item__link"><a href="https://t.me/masspower_vipbot"
+                <div class="project-item__link col-lg-3"><a href="https://t.me/masspower_vipbot"
                         target="_blank">t.me/masspower_vipbot</a></div>
             </div>
         </div>
     </div>
+    <section class="contacts">
+        <div class="container mt-5">
+            <div class="d-flex w-100 justify-content-center align-items-center flex-column">
+                <div class="contact-wrap p-md-5 p-4">
+                    <h3 class="mb-4 text-white">Оставить заявку на консультацию</h3>
+                    <form action="POST" id="contactForm" class="contactForm">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="name" class="label">Имя</label>
+                                    <input type="text" class="form-control" name="name" id="name">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="phone" class="label">Номер телефона</label>
+                                    <input type="text" class="form-control" name="phone" id="phone" placeholder="+998 00 000-00-00">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="message" class="label">Сообщение</label>
+                                    <textarea name="message" id="message" cols="30" rows=4"
+                                        class="form-control"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="submit" value="Отправить" class="btn btn-primary">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="form-text-success text-center">Спасибо, ваша заявка принята! Мы перезвоним вам в течении нескольких минут</p>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://kit.fontawesome.com/fe0fdd7367.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/imask"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -157,6 +228,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="/assets/js/form.js"></script>
 </body>
 
 </html>
