fix key features

--- a/index.html
+++ b/index.html
@@ -54,8 +54,13 @@
                             <div class="dot-wrapper">
                                 <div class="dot"></div>
                             </div>
-                            <span class="key-features__item-text">Фокусируемся на качестве разрабатываемых
-                                продуктов</span>
+                            <span class="key-features__item-text">Автоматизируем бизнес-процессы</span>
+                        </div>
+                        <div class="key-features__item">
+                            <div class="dot-wrapper">
+                                <div class="dot"></div>
+                            </div>
+                            <span class="key-features__item-text">Освобождаем ваше время с помощью технологий</span>
                         </div>
                         <div class="key-features__item">
                             <div class="dot-wrapper">
@@ -68,7 +73,8 @@
                             <div class="dot-wrapper">
                                 <div class="dot"></div>
                             </div>
-                            <span class="key-features__item-text">Команда разработчиков с 5-летним опытом</span>
+                            <span class="key-features__item-text">Фокусируемся на качестве разрабатываемых
+                                продуктов</span>
                         </div>
                     </div>
                 </div>
