fix key features

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <div class="dot-wrapper">
                                 <div class="dot"></div>
                             </div>
-                            <span class="key-features__item-text">Освобождаем ваше время с помощью технологий</span>
+                            <span class="key-features__item-text">Освобождаем ваше время с помощью IT</span>
                         </div>
                         <div class="key-features__item">
                             <div class="dot-wrapper">
