--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </div>
     </header>
     <div class="container">
-        <div class="about-main-content">
-            <div class="about-main-content__intro row">
+        <div class="key-features-content">
+            <div class="key-features-content__intro row">
                 <div class="intro__name col-lg-8 col-md-12 animate__animated animate__backInLeft">
                     <h1 class="hero-heading">
-                        < Мы делаем работу качественно />
+                        < Превращаем технологии в возможности />
                     </h1>
                     <div class="key-features">
                         <div class="key-features__item">
@@ -92,6 +92,36 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="about-content">
+            <h2>О нашей команде</h2>
+            <p>
+                "SKAYDI DEV" - это динамичная и инновационная IT-компания, стремящаяся предлагать передовые
+                технологические решения для бизнеса и общества. Наша команда представляет собой микс из опытных
+                разработчиков и ярких молодых талантов, вместе работающих над созданием уникальных продуктов и
+                услуг.
+            </p>
+            <p>
+                Мы специализируемся на разработке программного обеспечения, включая веб-приложения, Telegram-боты,
+                мобильные
+                приложения, облачные решения. Наш подход к работе основывается на
+                глубоком понимании технологий и тенденций рынка, что позволяет нам внедрять наиболее перспективные и
+                актуальные решения для наших клиентов.
+            </p>
+            <p>
+                "SKAYDI DEV" не просто разрабатывает продукты и услуги - мы стремимся к созданию цифровых
+                решений, которые могут действительно трансформировать бизнес наших клиентов и даже целые отрасли. Мы
+                вовлекаемся в каждый проект, будь то стартап, требующий MVP, или многофункциональная корпоративная
+                система, и стремимся к тому, чтобы каждое наше решение было эффективным, надежным и удобным в
+                использовании.
+            </p>
+            <p>
+                "SKAYDI DEV" предлагает своим клиентам поддержку на всех этапах работы: от консультаций и
+                разработки концепции до реализации проекта и его поддержки. Мы уверены, что каждый проект заслуживает
+                индивидуального подхода, и наша цель - помочь нашим клиентам реализовать их амбиции в сфере технологий.
+            </p>
         </div>
     </div>
     <div class="container">
@@ -197,7 +227,8 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="phone" class="label">Номер телефона</label>
-                                    <input type="text" class="form-control" name="phone" id="phone" placeholder="+998 00 000-00-00">
+                                    <input type="text" class="form-control" name="phone" id="phone"
+                                        placeholder="+998 00 000-00-00">
                                 </div>
                             </div>
                             <div class="col-md-12">
@@ -215,7 +246,8 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="form-text-success text-center">Спасибо, ваша заявка принята! Мы перезвоним вам в течении нескольких минут</p>
+                                <p class="form-text-success text-center">Спасибо, ваша заявка принята! Мы перезвоним вам
+                                    в течении нескольких минут</p>
                             </div>
                         </div>
                     </form>
